# openmanipulator_hand

./: CMakeLists.txt  package.xml
hand_control_interfaces/: CMakeLists.txt  package.xml
hand_control_interfaces/msg/: MoveHand.msg
hand_control_node/: CMakeLists.txt  package.xml
hand_control_node/include/: hand_control_node.hpp
hand_control_node/src/: hand_control_test_publisher.cpp  hand_current-based_position.cpp
src/: hand_current-based_position.cpp
